--- a/lib/scss/alpa.scss
+++ b/lib/scss/alpa.scss
@@ -11,6 +11,6 @@
   margin: 0px;
 }
 
-/**
- * Import All Utilities
- */
+@import "./media/xs/_xs";
+@import "./media/sm/_sm";
+@import "./media/md/_md";
