--- a/lib/css/alpa.css
+++ b/lib/css/alpa.css
@@ -15,4 +15,81 @@
 /**
  * All Properties Will Responsive
  */
+@media screen and (min-width: 0px) {
+  .d\:inline {
+    display: inline;
+  }
+  .d\:block {
+    display: block;
+  }
+  .d\:contents {
+    display: contents;
+  }
+  .d\:flex {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .d\:grid {
+    display: -ms-grid;
+    display: grid;
+  }
+  .d\:inline-block {
+    display: inline-block;
+  }
+  .d\:inline-flex {
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+  }
+  .d\:inline-grid {
+    display: -ms-inline-grid;
+    display: inline-grid;
+  }
+  .d\:inline-table {
+    display: inline-table;
+  }
+  .d\:list-item {
+    display: list-item;
+  }
+  .d\:run-in {
+    display: run-in;
+  }
+  .d\:table {
+    display: table;
+  }
+  .d\:table-caption {
+    display: table-caption;
+  }
+  .d\:table-column-group {
+    display: table-column-group;
+  }
+  .d\:table-header-group {
+    display: table-header-group;
+  }
+  .d\:table-footer-group {
+    display: table-footer-group;
+  }
+  .d\:table-row-group {
+    display: table-row-group;
+  }
+  .d\:table-cell {
+    display: table-cell;
+  }
+  .d\:table-column {
+    display: table-column;
+  }
+  .d\:table-row {
+    display: table-row;
+  }
+  .d\:none {
+    display: none;
+  }
+  .d\:initial {
+    display: initial;
+  }
+  .d\:inherit {
+    display: inherit;
+  }
+}
 /*# sourceMappingURL=alpa.css.map */
